5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1644_2443.log
== TEST (2019-04-16 13:49:58) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 1):
	print(round(pi*altura**2)*(3*raio - altura),4)
	
else:
	print(((round(pi*altura**2)*(3*raio - altura),4)-((4*pi*raio**3)/3))


                                                                                                                        
-- ERROR:
File "XXXX", line 16
    
                                                                                                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:50:07) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 1):
	print(round(pi*altura**2)*(3*raio - altura),4)
	
else:
	print((round(pi*altura**2)*(3*raio - altura),4)-((4*pi*raio**3)/3))


                                                                                                                        
-- OUTPUT:
28.650000000000002 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:50:10) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 1):
	print(round(pi*altura**2)*(3*raio - altura),4)
	
else:
	print((round(pi*altura**2)*(3*raio - altura),4)-((4*pi*raio**3)/3))


                                                                                                                        
-- EXECUTION TIME:
0.154325
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
28.650000000000002 4
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:50:11) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 1):
	print(round(pi*altura**2)*(3*raio - altura),4)
	
else:
	print((round(pi*altura**2)*(3*raio - altura),4)-((4*pi*raio**3)/3))


                                                                                                                        
-- OUTPUT:
28.650000000000002 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:52:28) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 1):
	formula=(pi*altura**2)*(3*raio - altura)
	print(round(formula,4))
	
else:
	print(formula - (4*pi*raio**3)/3)


                                                                                                                        
-- OUTPUT:
27.077
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:52:56) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 1):
	formula=(pi*altura**2)*(3*raio - altura)
	print(round(formula,4))
	
else:
	print(formula - (4*pi*raio**3)/3)


                                                                                                                        
-- EXECUTION TIME:
0.154655
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
27.077
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:53:06) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 2):
	formula=(pi*altura**2)*(3*raio - altura)
	print(round(formula,4))
	
else:
	print(formula - (4*pi*raio**3)/3)


                                                                                                                        
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(formula - (4*pi*raio**3)/3)
NameError: name 'formula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:53:36) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 2):
	formula=((pi*altura**2)*(3*raio - altura))
	print(round(formula,4))
	
else:
	print(formula - (4*pi*raio**3)/3)


                                                                                                                        
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(formula - (4*pi*raio**3)/3)
NameError: name 'formula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:53:51) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 2):
	formula=((pi*altura**2)*(3*raio - altura))
	print(round(formula,4))
	
else:
	print(formula - (4*pi*raio**3)/3)


                                                                                                                        
-- EXECUTION TIME:
0.206051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2443/main.py", line 13, in <module>
    print(formula - (4*pi*raio**3)/3)
NameError: name 'formula' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:53:18) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 2):
	formula=((pi*altura**2)*(3*raio - altura))
	print(round(formula,4))
	
else:
	print(formula - (4*pi*raio**3)/3)


                                                                                                                        
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(formula - (4*pi*raio**3)/3)
NameError: name 'formula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:53:42) 
-- CODE:
from math import*

raio= float(input("Raio do tanque: "))
altura=float(input("Altura x: "))

opc= int(input(" 1 ou 2: "))

if (opc == 2):
	formula=((pi*altura**2)*(3*raio - altura))
	print(round(formula,4))
	
else:
	print(formula - (4*pi*raio**3)/3)


                                                                                                                        
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(formula - (4*pi*raio**3)/3)
NameError: name 'formula' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
